# f1tenth_gym

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.codex/: config.toml  requirements.toml
.codex/hooks/: post_edit_checks.py
.opencode/plugins/: post-edit-checks.ts
configs/muzero/: default.yaml
configs/ppo/: default.yaml  multitrack.yaml  yasmarina_sepang.yaml
configs/raceline/: f110.ini
controllers/: __init__.py  controller_base.py  ppo.py  pure_pursuit.py  stanley.py
controllers/lmpc/: CMakeLists.txt  DESIGN.md  README.md  __init__.py  adapter.py  binding.py  controller.py  lap_data.py  lmpc.py  lmpc_native.pyi
controllers/lmpc/include/: linearization.hpp  lmpc_config.hpp  lmpc_controller.hpp  log.hpp  qp_builder.hpp  safe_set.hpp  track.hpp
controllers/lmpc/include/dynamics/: common.hpp  extended_kinematic_dynamics.hpp  gym_dynamics.hpp
controllers/lmpc/include/integrators/: common.hpp  euler.hpp  rk4.hpp
controllers/lmpc/include/lmpc/: state.hpp
controllers/lmpc/include/ros_shim/boost/algorithm/: string.hpp
controllers/lmpc/include/ros_shim/geometry_msgs/: Point.h  Pose.h
controllers/lmpc/include/ros_shim/nav_msgs/: OccupancyGrid.h
controllers/lmpc/include/ros_shim/tf/: transform_listener.h
controllers/lmpc/include/ros_shim/visualization_msgs/: Marker.h
controllers/lmpc/src/: bindings.cpp  lmpc_controller.cpp  lmpc_core.cpp  native_controller.cpp  qp_builder.cpp  safe_set.cpp  state.cpp  track.cpp
controllers/lmpc/tests/: test_terminal_safe_set.cpp
docs/: coding_style.md  cpp-backend.md  google_python_style_guide.md  index.md  lmpc_drive.md  realtime_visualization.md  rollout_kernel.md
gym/f110_gym/: __init__.py  viewer.py
gym/f110_gym/envs/: AGENTS.md  __init__.py  base_classes.py  collision_models.py  dynamic_models.py  f110_env.py  laser_models.py  rendering.py
gym/f110_gym/rollout_kernel/: CMakeLists.txt  CMakePresets.json  README.md  __init__.py  backend.py  backend.pyi
gym/f110_gym/rollout_kernel/include/: dynamics.hpp  f110_collision.hpp  f110_observation.hpp  f110_reward.hpp  f110_scan.hpp  f110_step.hpp  f110_track_map.hpp  simd.hpp  step.hpp  types.hpp
gym/f110_gym/rollout_kernel/include/f110_rollout_kernel/: dynamics.hpp  step.hpp
gym/f110_gym/rollout_kernel/natives/: __init__.py
gym/f110_gym/rollout_kernel/src/: bindings.cpp  dynamics.cpp  step.cpp
maps/custom/: config_Operngasse_map.yaml  config_Sepang_map.yaml  config_Shanghai_map.yaml  config_YasMarina_map.yaml  config_YasMarina_rta_demo.yaml  config_blackbox2021_1_map.yaml  config_blackbox2021_2_map.yaml  config_blackbox2021_3_map.yaml  config_blackbox2022_1_map.yaml  config_blackbox2022_2_map.yaml  config_blackbox2022_3_map.yaml  config_example_map.yaml  config_f110_gym_map.yaml  map_da_mcts_new_reward_Sepang_kd069tac.yaml  map_stanley_YasMarina_10489_1l45r_rb.yaml
maps/custom/Operngasse_10/: Operngasse_centerline.csv  Operngasse_map.yaml  traj_race_cl_centerline_Operngasse_10_map.csv
maps/custom/Sepang_04947/: traj_race_cl_Sepang_04947_map.csv  traj_race_cl_centerline_mintime_mue0.4947_Sepang_map.csv
maps/custom/Sepang_08642/: traj_race_cl_Sepang_08642_map.csv  traj_race_cl_centerline_mintime_mue0.8642_Sepang_map.csv
maps/custom/Sepang_10489/: traj_race_cl_Sepang_10489_map.csv  traj_race_cl_centerline_Sepang_10489_map.csv  traj_race_cl_centerline_mintime_mue1.0489_Sepang_map.csv
maps/custom/Shanghai_04947/: traj_race_cl_Shanghai_04947_map.csv  (+1 more)
maps/custom/barc_oval/: barc_oval_centerline.csv  (+1 more)
models/: __init__.py
models/muzero/: __init__.py  action.py  config.py  network.py  replay_buffer.py  trainer.py
models/policies/: __init__.py  base.py  gaussian_actor_critic.py  gaussian_mlp.py  residual_mlp.py
models/ppo/: __init__.py  config.py  data.py  trainer.py
planner/f110_self_play/: CMakeLists.txt  CMakePresets.json  README.md  __init__.py  __init__.pyi  backend.py  backend.pyi  gym_backend.py  self_play.py
planner/f110_self_play/include/: f110_self_play.hpp
planner/f110_self_play/include/f110_self_play/: action_lattice.hpp  environment_backend.hpp  episode_metrics.hpp  muzero_search_adapter.hpp  search_algorithm.hpp  self_play_engine.hpp  trajectory.hpp
planner/f110_self_play/src/: bindings.cpp
planner/tree_search/: CMakeLists.txt  CMakePresets.json  README.md  backend.py  backend.pyi  muzero.py
planner/tree_search/include/: common.hpp  payload.hpp  search.hpp  tree.hpp  tree_policies.hpp
planner/tree_search/include/common/: simd.hpp
planner/tree_search/include/payload/: edge_stats.hpp  muzero_payload.hpp
planner/tree_search/include/search/: mcts_search.hpp  muzero_search.hpp
planner/tree_search/include/tree/: batched_mcts_tree.hpp  batched_muzero_tree.hpp  batched_tree_base.hpp
planner/tree_search/include/tree_policies/: puct_policy.hpp
planner/tree_search/src/: bindings.cpp
runs/: __init__.py  lmpc_drive.py  muzero_drive.py  muzero_drive_cpp.py  ppo_drive.py  train_muzero_planner.py  train_ppo.py  train_ppo_controller.py  waypoint_drive.py
scripts/: build_native_backends_debug.sh  build_native_backends_release.sh  generate_centerline.py  generate_lmpc_seed_lap.py  generate_lmpc_trajectory.py  generate_map.py  generate_race_line.py  lmpc_collect_seed_lap.py  optimize_mintime.py
scripts/f110_gym/: generate_waypoints.py  legacy_scan_gen.py  pyglet_camera_demo.py  pyglet_demo.py  random_trackgen.py
tests/: conftest.py  test_collision_checks.py  test_dynamics.py  test_generate_centerline.py  test_generate_lmpc_trajectory.py  test_gymnasium_api.py  test_lmpc_lap_data.py  test_lmpc_state_adapter.py  test_muzero_replay_buffer.py  test_policy_factory.py  test_ppo_loss.py  test_ppo_reward.py  test_rollout_kernel_parity.py  test_scan_sim.py  test_waypoint_features.py
tests/f110_rollout_kernel/: conftest.py  test_collision_parity.py  test_dynamics_parity.py  test_observation_parity.py  test_reward_parity.py  test_scan_parity.py
utils/: __init__.py  f110_env.py  f110_reward.py  track_map.py  track_scheduler.py  waypoint_utils.py  waypoint_view.py
(+76 files in other folders)
