[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f110-gym"
version = "0.1.0"
description = "F1TENTH Gymnasium-compatible environment"
requires-python = ">=3.11"
dependencies = [
  "gymnasium>=1.0",
  "numpy>=1.23",
  "numba>=0.59",
  "scipy>=1.10",
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
render = ["pyglet>=2.0"]
tools = ["matplotlib>=3.8"]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {f110_gym = "gym/f110_gym", controllers = "controllers"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["gym", "."]
include = ["f110_gym*", "controllers*", "utils*"]

[tool.setuptools.package-data]
f110_gym = [
  "maps/*.yaml",
  "maps/*.png",
  "maps/*.pgm",
]
